src/objects/ACCL__Sales_Organization__c.object
<CustomObject>
    <description>This Object holds the details of the Sales Organization.</description>
    <fields>
        <fullName>ACCL__Account_Number__c</fullName>
        <description>Account number at the bank</description>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__BIN__c</fullName>
        <description>Bank Identification Number</description>
        <label>BIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Bank_Code__c</fullName>
        <description>Code of the bank</description>
        <label>Bank Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Bank__c</fullName>
        <description>The bank used for payments</description>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Business_Unit__c</fullName>
        <description>Reference to the book keeping segment.</description>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Call_Start_Time__c</fullName>
        <description>Stores call start time</description>
        <label>Call Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__City__c</fullName>
        <description>Name of a city.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Country__c</fullName>
        <description>Describes country.</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Currency__c</fullName>
        <description>Currency of the sales organization</description>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Default_Price_List_Type__c</fullName>
        <description>Default price list type of the sales organization</description>
        <label>Default Price List Type</label>
        <picklist>
            <picklistValues>
                <fullName>WS1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotRelevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Default_Price_Type__c</fullName>
        <description>Default price type of the sales organization.</description>
        <label>Default Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotRelevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <label>Description Language 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c, 
&quot;Language1&quot;, ACCL__Description_Language_1__c, 
&quot;Language2&quot;, ACCL__Description_Language_2__c, 
&quot;Language3&quot;, ACCL__Description_Language_3__c,
&quot;Language4&quot;, ACCL__Description_Language_4__c, 
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Distance_Unit__c</fullName>
        <label>Distance Unit</label>
        <picklist>
            <picklistValues>
                <fullName>km</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>miles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Email__c</fullName>
        <description>Email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ACCL__Fax__c</fullName>
        <description>Fax number</description>
        <label>Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__First_Day_Of_Week__c</fullName>
        <description>Describes the days of the week</description>
        <label>First Day Of Week</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__First_Week_Of_Year__c</fullName>
        <description>This field displays the week for call scheduling</description>
        <label>First Week Of Year</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Global_Sales_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Sales Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__IBAN__c</fullName>
        <description>International Bank Account-Number</description>
        <label>IBAN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Language_1__c</fullName>
        <description>Language for the sales organization</description>
        <label>Language 1</label>
        <picklist>
            <picklistValues>
                <fullName>en</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Language_2__c</fullName>
        <label>Language 2</label>
        <picklist>
            <picklistValues>
                <fullName>en</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Language_3__c</fullName>
        <label>Language 3</label>
        <picklist>
            <picklistValues>
                <fullName>en</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Legal_Information__c</fullName>
        <description>Legal information to be shown on the print-outs</description>
        <label>Legal Information</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__No__c</fullName>
        <description>House Number</description>
        <label>No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Phone__c</fullName>
        <description>Phone Number</description>
        <label>Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Postbox__c</fullName>
        <description>Number of a number post box.</description>
        <label>Postbox</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Aggregation_Level__c</fullName>
        <description>Defines at which level the product is located.</description>
        <label>Promotion Aggregation Level</label>
        <picklist>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SubCategory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flavor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__SWIFT__c</fullName>
        <description>International bank account identifier</description>
        <label>SWIFT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__State__c</fullName>
        <description>Name of the State</description>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Street__c</fullName>
        <description>Name of a street</description>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Tax_Jurisdiction_Code__c</fullName>
        <description>Tax account number</description>
        <label>TIN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Zip_Code__c</fullName>
        <description>Postal code.</description>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_S_OP_Window_In_Weeks__c</fullName>
        <defaultValue>17</defaultValue>
        <label>S&amp;OP Window(In Weeks)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Organization</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Currency__c</columns>
        <columns>ACCL__Global_Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Organization</pluralLabel>
    <recordTypes>
        <fullName>UL_SoCo</fullName>
        <active>true</active>
        <description>page layout for SoCo</description>
        <label>SoCo</label>
    </recordTypes>
    <recordTypes>
        <fullName>UL_UKI</fullName>
        <active>true</active>
        <description>Record type for UKI sales orgs</description>
        <label>UKI</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ACCL__Call_Start_Time_Format_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK( ACCL__Call_Start_Time__c)), 
NOT(REGEX(ACCL__Call_Start_Time__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>ACCL__Call_Start_Time__c</errorDisplayField>
        <errorMessage>Please enter the correct format for Call Start time (hh:mm &amp; valid range: 00:00 to 23:59).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_If_Name_Is_Unique</fullName>
        <active>true</active>
        <errorConditionFormula>and( 
Name = VLOOKUP 
($ObjectType.ACCL__Sales_Organization__c.Fields.Name , $ObjectType.ACCL__Sales_Organization__c.Fields.Name, Name ), 

not( 
Id=VLOOKUP 
($ObjectType.ACCL__Sales_Organization__c.Fields.Id , $ObjectType.ACCL__Sales_Organization__c.Fields.Name, Name )))</errorConditionFormula>
        <errorMessage>A Sales Organization with the same name already exists, please specify a different name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Language_Unique_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR((NOT(ISBLANK(Text(ACCL__Language_1__c))) &amp;&amp; OR(Text(ACCL__Language_1__c)== Text(ACCL__Language_2__c), Text(ACCL__Language_1__c)== Text(ACCL__Language_3__c), Text(ACCL__Language_1__c)== Text(ACCL__Language_4__c))),(NOT(ISBLANK(TEXT(ACCL__Language_2__c))) &amp;&amp; OR(Text(ACCL__Language_2__c)== Text(ACCL__Language_3__c), Text(ACCL__Language_2__c)== Text(ACCL__Language_4__c))),(NOT(ISBLANK(Text(ACCL__Language_3__c))) &amp;&amp; (Text(ACCL__Language_3__c)== Text(ACCL__Language_4__c) ))),true,false)</errorConditionFormula>
        <errorMessage>Same language cannot be selected  twice for a sales organisation.</errorMessage>
    </validationRules>
</CustomObject>